force-app/main/default/objects/Book_Item__c/Book_Item__c.object-meta.xml
<CustomObject>
    <label>Book Item</label>
    <nameField>
        <displayFormat>BI-{00000000}</displayFormat>
        <label>Book Item Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>