force-app/main/default/objects/Book_Item__c/fields/Back_Cover__c.field-meta.xml
<CustomField>
    <fullName>Back_Cover__c</fullName>
    <label>Back Cover</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>