force-app/main/default/objects/Book_Item__c/fields/Barcode__c.field-meta.xml
<CustomField>
    <fullName>Barcode__c</fullName>
    <label>Barcode</label>
    <length>12</length>
    <type>Text</type>
</CustomField>