force-app/main/default/objects/Book_Item__c/fields/Book_Title__c.field-meta.xml
<CustomField>
    <fullName>Book_Title__c</fullName>
    <label>Book Title</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipName>BookCopy</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>