force-app/main/default/objects/Book_Item__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audiobook</fullName>
            </value>
            <value>
                <fullName>Ebook</fullName>
            </value>
            <value>
                <fullName>Hardcover</fullName>
            </value>
            <value>
                <fullName>Paperback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>