force-app/main/default/objects/Book_Item__c/fields/Front_Cover__c.field-meta.xml
<CustomField>
    <fullName>Front_Cover__c</fullName>
    <label>Front Cover</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>