force-app/main/default/objects/Book_Item__c/fields/ISBN_Code__c.field-meta.xml
<CustomField>
    <fullName>ISBN_Code__c</fullName>
    <label>ISBN Code</label>
    <length>13</length>
    <type>Text</type>
</CustomField>