force-app/main/default/objects/Book_Item__c/fields/Publication_Year__c.field-meta.xml
<CustomField>
    <fullName>Publication_Year__c</fullName>
    <label>Publication Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>