force-app/main/default/objects/Book_Item__c/validationRules/Publication_Year_must_be_numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Publication_Year_must_be_numeric</fullName>
    <active>false</active>
    <errorConditionFormula>!ISNUMBER(Publication_Year__c )</errorConditionFormula>
    <errorDisplayField>Publication_Year__c</errorDisplayField>
    <errorMessage>Publication year must be numeric.</errorMessage>
</ValidationRule>