force-app/main/default/objects/Book_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Book_Title__c</columns>
    <columns>Status__c</columns>
    <columns>Condition__c</columns>
    <columns>Format__c</columns>
    <columns>Publication_Year__c</columns>
    <columns>Publisher__c</columns>
    <columns>Barcode__c</columns>
    <columns>ISBN_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>